add new feature and fix issues

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -9,6 +9,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="http://builds.openvidu.io/release/6.10.0/js/kurento-utils.min.js"></script>
+    <script src="https://js.pusher.com/7.0/pusher.min.js"></script>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
