--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -12,6 +12,7 @@
     <script src="https://www.webrtc-experiment.com/DetectRTC.js"></script>
     <script src="https://js.stripe.com/v2/"></script>
     <script id="stripe-js" src="https://js.stripe.com/v3/" async></script>
+    <script async data-ad-client="ca-pub-8022559137099901" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- <script src="https://js.pusher.com/7.0/pusher.min.js"></script> -->
     <!--
       manifest.json provides metadata used when your web app is added to the
