--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -5,6 +5,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="With virtual live chat tutorial, you can arrange one on one session or group lessons with an experienced, knowledgeable mentor... If you are in need of a knowledgeable guide, for homework, self help Or DIY, an experienced mentor will be effective in maximizing your productivity and can be an effective aid in successful task completion.">
+    <meta name="image" content="/images/Brainsshare.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <script src="https://js.stripe.com/v2/"></script>
